src/objects/SPE_SPEKPIMap__c.object
<CustomObject>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>KPI Definition</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPE_KPIDefinition__c.LifecycleStage__c</field>
                <operation>equals</operation>
                <value>Published, Pilot</value>
            </filterItems>
            <filterItems>
                <field>SPE_KPIDefinition__c.PI_Data__r.ValuesType__c</field>
                <operation>notEqual</operation>
                <value>Boolean, String, Date</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>SPE KPI Maps</relationshipLabel>
        <relationshipName>SPE_KPI_Maps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIGroup1__c</fullName>
        <formula>TEXT(KPIDefinition__r.Group1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIGroup2__c</fullName>
        <formula>TEXT(KPIDefinition__r.Group2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Group2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Target__c</fullName>
        <label>KPI Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>SPE KPI Maps</relationshipLabel>
        <relationshipName>SPE_KPI_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UseLatestKPIVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to add latest KPI Version to SPE Template</description>
        <label>UseLatestKPIVersion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>KPIDefinition__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>SPE KPI Map</label>
    <nameField>
        <displayFormat>SKMI-{00000}</displayFormat>
        <label>SPE KPI Map Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE KPI Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SPE_WeightageCan_not_be_Nagative</fullName>
        <active>true</active>
        <errorConditionFormula>Weight__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Weight__c</errorDisplayField>
        <errorMessage>Weightage field can not be negative</errorMessage>
    </validationRules>
</CustomObject>